--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
         android:layout_marginBottom="3dp"
         android:layout_marginTop="3dp"
         android:background="?attr/colorButtonNormal"
-        android:onClick="plaB"
+        android:onClick="playB"
       />
 
 </LinearLayout>
